[package]
name = "actix-modsecurity"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-http = "3.11.0"
actix-service = "2.0.3"
actix-web = { version = "4.11.0", default-features = false }
derive_more = { version = "2.0.1", features = ["display"] }
futures-core = { version = "0.3.31", default-features = false }
modsecurity = "1.0.0"
tracing = "0.1.41"

[dev-dependencies]
actix-web = { version = "4.11.0", default-features = false, features = ["macros"] }
tracing-subscriber = "0.3.19"
