[package]
name = "actix-rewrite"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-http = "3.11.0"
actix-service = "2.0.3"
actix-web = { version = "4.11.0", default-features = false }
derive_more = { version = "2.0.1", features = ["display"] }
futures-core = { version = "0.3.31", default-features = false }
mod_rewrite = { version = "0.1.0", path = "../../mod_rewrite" }
regex = "1.11.1"
serde_urlencoded = "0.7.1"
